--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
       # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo_login.png
+    - assets/images/google.png
+    - assets/images/iphone.png
    # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
