Add intro logo and update pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/logo_login.png
     - assets/images/google.png
     - assets/images/iphone.png
+    - assets/images/logo_intro.jpg
    # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
