feat: add vocabs

--- a/laravel-magic-english-api/.env.example
+++ b/laravel-magic-english-api/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TIsBx37Pf7nC1uedWfOLGgf2PLkWzXluq+zBLqLvrdA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -24,9 +24,11 @@ LOG_DAILY_DAYS=14
 DB_CONNECTION=mariadb
 DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=timtro247
-DB_USERNAME=timtro247
+DB_DATABASE=magic-english-api
+DB_USERNAME=magic-english-api
 DB_PASSWORD=secret
+
+
 
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
@@ -64,3 +66,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+GEMINI_API_KEY=AIzaSyCSmUaMByWtYhuFVbqs6SFnI17KNpuCd_0
+GEMINI_MODEL=models/gemini-3-flash-preview
+GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta
+
+OLLAMA_BASE_URL=http://localhost:11434/v1
