--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.1.2
   shared_preferences: ^2.5.3
   provider: ^6.1.5+1
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
